assets/scss/components/wpb/quick-donation.scss
@import "../../variables";

.quick-donation {
  background: $primary-color;
  padding: 40px 0;

  @media (max-width: 992px) {
    padding: 20px 0;
  }

  .quick-donation--title {
    h2 {
      color: $light-color;
      font-weight: bold;
    }
  }

  .quick-donation--content {
    display: flex;
    justify-content: space-around;
    align-items: center;
    margin-top: 1rem;

    @media (max-width: 992px) {
      max-width: 600px;
      width: 100%;
      margin: 0 auto;
      flex-direction: column;
      gap: 1.5rem;
      grid-gap: 1.5rem;
    }

    .quick-donation--amount {
      display: flex;
      justify-content: space-between;
      gap: 1.25rem;
      grid-gap: 1.25rem;
      width: 100%;

      @media (max-width: 1199px) {
        gap: 1rem;
        grid-gap: 1rem;
      }

      @media (max-width: 992px) {
        flex-direction: column;
        justify-content: center;
        gap: 1rem 0.5rem;
        grid-gap: 1rem 0.5rem;
      }

      .select-holder {
        .select-icon {
          pointer-events: none;
          right: 1rem;
          color: $primary-color;
        }

        select {
          border: 1px solid $primary-color;
          border-radius: $radius-15;
          color: $primary-color;
          padding: 1.25rem 2.5rem 1.25rem 1rem;
          outline: none;
          font-weight: bold;
          font-size: 18px;
          appearance: none;
          -webkit-appearance: none;

          @media (max-width: 1199px) {
            font-size: 16px;
          }

          @media (max-width: 992px) {
            width: 100%;
          }
        }
      }

      .quick-donation--amount-btns {
        display: flex;
        gap: 0.25rem 0.5rem;
        grid-gap: 0.25rem 0.5rem;

        @media (max-width: 576px) {
          gap: 0.5rem;
          flex-wrap: wrap;
        }

        .quick-donation-amount--item {
          padding: 20px;
          background: $light-color;
          color: $primary-color;
          font-size: 20px;
          cursor: pointer;
          transition: color 0.3s ease-in-out, background 0.3s ease-in-out;
          display: flex;
          justify-content: center;
          align-items: center;
          text-align: center;
          border-radius: $radius-15;
          font-weight: bold;
          flex-grow: 1;

          @media (max-width: 1199px) {
            font-size: 16px;
          }

          @media (max-width: 768px) {
            word-wrap: anywhere;
          }

          &.selected-price {
            background: $secondary-color;
            color: $light-color;
          }

          &.other-amount {
            input {
              padding: 0;
              max-width: 80px;
              border: none;
              text-align: center;
              color: $primary-color;
              background: transparent;
              font-weight: bold;

              &:focus-visible {
                outline: none;
              }

              &::placeholder {
                color: $primary-color;
                opacity: 1;
              }
            }

            &.selected-price {
              input {
                color: $light-color;

                &::placeholder {
                  color: $light-color;
                }
              }
            }
          }
        }
      }

      .quick-donation--cta {
        display: flex;
        width: 200px;
        max-width: 100%;

        @media (max-width: 1199px) {
          width: 100%;
        }

        button {
          padding: 1.25rem 1rem;
          font-size: 20px;
          width: 100%;
          font-weight: bold;

          @media (max-width: 1199px) {
            font-size: 16px;
            padding: 0.75rem 1rem;
          }
        }
      }
    }

    & > span {
      color: $light-color;
      font-size: 1.5em;
      line-height: 1.25;

      @media (max-width: 992px) {
        font-size: 1.25em;
        margin-top: 1rem;
      }
    }
  }

  &.fixed-quick-donation {
    position: fixed;
    left: 0;
    right: 0;
    bottom: 0;
    z-index: 9;
    padding: 20px 0;
    background: rgba($primary-color, 0.85);
    backdrop-filter: blur(5px);

    @media (max-width: 992px) {
      padding: 0 0 20px;
      transform: translateY(calc(100% - 62px));
      transition: 0.4s ease-in-out;

      &.expanded {
        transform: translateY(0);

        .quick-donation--title {
          .toggle-quick-donation {
            i {
              transform: rotate(180deg);
            }
          }
        }
      }
    }

    @media (max-height: 600px) {
      transform: translateY(calc(100% - 46px));
    }

    .quick-donation--title {
      @media (min-width: 993px) {
        display: none;
      }

      @media (max-width: 992px) {
        display: flex;
        align-items: center;
        justify-content: space-between;
        padding: 1rem 0;
        margin-bottom: 0 !important;
        cursor: pointer;
      }

      @media (max-height: 600px) {
        padding: 0.5rem 0;
      }
      
      h2 {
        font-size: 1.5rem;

        @media (max-width: 992px) {
          margin-bottom: 0;
          pointer-events: none;
        }

        @media (max-width: 350px) {
          font-size: 1.25rem;
        }
      }

      .toggle-quick-donation {
        display: flex;
        justify-content: center;
        align-items: center;
        text-align: center;
        background: $light-color;
        width: 30px;
        height: 30px;
        border-radius: 50%;
        pointer-events: none;

        i {
          pointer-events: none;
          color: $primary-color;
          transition: 0.4s ease-in-out;
        }
      }
    }

    .quick-donation--content {
      margin-top: 0;

      @media (max-width: 992px) {
        margin-top: 0.5rem;
      }

      .quick-donation--amount {
        .select-holder {
          flex-grow: 1;
          flex-shrink: 0;
          
          select {
            width: 100%;
            padding: 0.75rem 2.5rem 0.75rem 1rem;
          }
        }

        .quick-donation--amount-btns {
          .quick-donation-amount--item {
            padding: 0.75rem 1rem;
          }
        }

        .quick-donation--cta {
          button {
            padding: 0.75rem 1rem;
          }
        }
      }
    }
  }

  &:not(.fixed-quick-donation) {
    .quick-donation--title .toggle-quick-donation {
      display: none;
    }
    
    .quick-donation--content {
      .quick-donation--amount {
        .quick-donation-amount--item {
          padding: 0.75rem 1.25rem;
          font-size: 1.25em;

          @media (max-width: 768px) {
            padding: 0.5rem;
          }
        }
      }
    }
  }
}

// RTL
html[dir="rtl"] {
  .quick-donation {
    .quick-donation--content {
      .quick-donation--amount {
        .select-holder {
          select {
            padding: 0.75rem 1rem 0.75rem 2.5rem;
          }

          .select-icon {
            right: unset;
            left: 1rem;
          }
        }
      }
    }
  }
}

